examples/test/testpolicy9373.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9373
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key10: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value27
      podSelector:
        matchLabels:
          key24: value16
          key35: value7
          key21: value44
